Benign lumps: Make procedures legend aria-hidden
Matching the choice in the prototype to make this heading
aria-hidden=true.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/benign_lump_history_item_form.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/benign_lump_history_item_form.jinja
@@ -7,21 +7,18 @@
   {% do form.left_breast_procedures.add_divider_after("LUMP_REMOVED", "or") %}
   {% do form.right_breast_procedures.add_divider_after("LUMP_REMOVED", "or") %}
 
-  {% call fieldset({
-    "legend": {
-      "text": "What benign lump procedures has " ~ participant_first_name ~ " had?",
-      "classes": "nhsuk-fieldset__legend--m"
-    }
-  }) %}
-    <div class="nhsuk-grid-row">
-      <div class="nhsuk-grid-column-one-half">
-        {{ form.right_breast_procedures.as_field_group() }}
-      </div>
-      <div class="nhsuk-grid-column-one-half">
-        {{ form.left_breast_procedures.as_field_group() }}
-      </div>
+  <h2 aria-hidden="true">
+    What benign lump procedures has {{ participant_first_name }} had?
+  </h2>
+
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-one-half">
+      {{ form.right_breast_procedures.as_field_group() }}
     </div>
-  {% endcall %}
+    <div class="nhsuk-grid-column-one-half">
+      {{ form.left_breast_procedures.as_field_group() }}
+    </div>
+  </div>
 
   {{ form.procedure_year.as_field_group() }}
 
