make 'Year removed' optional for 'Implanted device has been removed'

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/implanted_medical_device_history.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/implanted_medical_device_history.jinja
@@ -3,15 +3,19 @@
 {% from "nhsuk/components/fieldset/macro.jinja" import fieldset %}
 
 {% block form %}
-  {% do form.device.add_conditional_html('OTHER_MEDICAL_DEVICE', form.other_medical_device_details.as_field_group()) %}
-
-  {% do form.removal_status.add_conditional_html('HAS_BEEN_REMOVED', form.removal_year.as_field_group()) %}
-
   {{ form.device.as_field_group() }}
 
   {{ form.procedure_year.as_field_group() }}
 
-  {{ form.removal_status.as_field_group() }}
+  {% do form.device_has_been_removed.add_conditional_html('true', form.removal_year.as_field_group()) %}
+  {% call fieldset({
+    "legend": {
+      "text": "Removed implants",
+      "classes": "nhsuk-fieldset__legend--m"
+    }
+  }) %}
+    {{ form.device_has_been_removed.as_field_group() }}
+  {% endcall %}
 
   {{ form.additional_details.as_field_group() }}
 
