--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -35,6 +35,9 @@
 {% set medical_history_card_html %}
   {% set breast_cancer_history_html %}
     {% for presented_item in presenter.breast_cancer_history %}
+      <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ presented_item.change_link.href}}">
+        {{ presented_item.change_link.text }}<span class="nhsuk-u-visually-hidden">{{ presented_item.change_link.visually_hidden_text }}</span>
+      </a><br>
       {{ summaryList(presented_item.summary_list_params) }}
     {% endfor %}
     <a href="{{ presenter.add_breast_cancer_history_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_breast_cancer_history_link.text }}</a><br>
