refactor: extract generic view for deletion confirmation
We already have a generic template for these pages, and I expect each to
follow a common pattern, so this is a case where it might be useful to use
Django's generic views.

We also need to make sure that all deletes are audited, and that we show
a success message.

--- a/manage_breast_screening/core/jinja2/layout-confirmation.jinja
+++ b/manage_breast_screening/core/jinja2/layout-confirmation.jinja
@@ -1,5 +1,7 @@
 {% extends "layout-app.jinja" %}
 {% from 'nhsuk/components/button/macro.jinja' import button %}
+{% from 'nhsuk/components/inset-text/macro.jinja' import insetText %}
+
 
 {% block header %}
   {{ header({
@@ -21,6 +23,13 @@
     </h1>
 
     {% block details %}
+      {% set insetTextHtml %}
+        <p>This action is final and cannot be undone.</p>
+      {% endset %}
+
+      {{ insetText({
+        "html": insetTextHtml
+      }) }}
     {% endblock %}
 
     <form method="post" action="{{ confirm_action.href | default(request.path) }}">
