Allow deletion of other procedures

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/other_procedure_history.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/other_procedure_history.jinja
@@ -14,5 +14,13 @@
       "text": "Save"
     }) }}
   </div>
+
+  {% if delete_link %}
+    <p class="nhsuk-u-margin-top-4">
+      <a href="{{ delete_link.href }}" class="{{ delete_link.class }}">
+        {{ delete_link.text }}
+      </a>
+    </p>
+  {% endif %}
 {% endblock %}
 
