add past mammograms to medical history page
This is not yet complete, and it only shows reported mammograms, not
mammograms taken from the screening record.

I'm just making it consistent with what's already shown on the view
appointment page, under participant details.

The copy is slightly misleading because the last confirmed mammogram
isn't shown yet.

The "Add another mammogram" button on the record medical
information page is a small button, and submitting the form
should redirect back to the record medical information page.

In the prototype, the form redirects back to the specific section,
and highlights it with a border. We don't have this yet, but we can
implement it consistently for all sections in another ticket.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -3,8 +3,33 @@
 {% from "nhsuk/components/card/macro.jinja" import card %}
 {% from "nhsuk/components/inset-text/macro.jinja" import insetText %}
 {% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
+{% from "components/participant-details/summary_list_rows.jinja" import last_mammogram_html %}
 
 {% block step_content %}
+
+{% call card({"heading": "Mammogram history"}) %}
+  <p>The last confirmed mammogram and any added manually since then</p>
+
+  {{ summaryList({
+    "rows": [
+      {
+        "key": {
+          "text": "Last known mammograms"
+        },
+        "value": {
+          "html": last_mammogram_html(presented_mammograms)
+        }
+      },
+    ]
+  }) }}
+
+  {{ button({
+    "text": presenter.add_mammogram_button.text,
+    "href": presenter.add_mammogram_button.href,
+    "classes": "nhsuk-button--secondary nhsuk-button--small"
+  }) }}
+
+{% endcall %}
 
 {% call card({
   "heading": "Symptoms",
