--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/mastectomy_or_lumpectomy_history.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/mastectomy_or_lumpectomy_history.jinja
@@ -6,9 +6,7 @@
 {% block form %}
   <p>
     This is designed to capture information on prophylactic or elective surgery.
-    <a href="{{ presenter.add_breast_cancer_history_button.href }}" class="nhsuk-link">
-      Add breast cancer details
-    </a>
+    <a href="{{ presenter.add_breast_cancer_history_button.href }}" class="nhsuk-link">Add breast cancer details</a>
     if that was the reason for this surgery.
   </p>
 
