Add delete link to appointment note tab
- Put appointment note view logic into its own file
- Add a view dealing with note deletion, including a confirmation step

--- a/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_note.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_note.jinja
@@ -77,8 +77,16 @@
         {{ button({
           "text": "Save note"
         }) }}
+        {% if form.instance_is_saved %}
+          <p>
+            <a href="{{ url('mammograms:delete_appointment_note', kwargs={'pk': presented_appointment.pk}) }}" class="nhsuk-link app-link--warning">
+              Delete appointment note
+            </a>
+          </p>
+        {% endif %}
       </div>
     </form>
+
   </div>
 </div>
 {% endblock %}
