Appointment can't proceed if had mammogram within the last 6 months
Moved previous_mammogram from participants to mammograms.

Altered add previous mammogram to use AddWithAuditView.

Added ability to update a previous mammogram.

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -40,6 +40,12 @@
   }}
 {% endblock %}
 
+{% block beforeContent %}
+  {% if back_link_params %}
+  {{ backLink(back_link_params) }}
+  {% endif %}
+{% endblock beforeContent %}
+
 {% block content %}
   {% block flash_messages %}
     {% set info_notification_params = get_notification_banner_params(
