--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -1,106 +1,86 @@
 {% extends "wizard_step.jinja" %}
 {% from "nhsuk/components/button/macro.jinja" import button %}
-{% from "nhsuk/components/card/macro.jinja" import card %}
 {% from "nhsuk/components/inset-text/macro.jinja" import insetText %}
 {% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
-{% from 'nhsuk/components/tag/macro.jinja' import tag %}
 {% from "components/participant-details/summary_list_rows.jinja" import last_mammogram_html %}
 {% from "mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja" import breast_cancer_history_card %}
+{% from "mammograms/components/card_with_status.jinja" import card_with_status %}
 
 {% block step_content %}
 
-<div id="{{ presenter.get_anchor(sections.MAMMOGRAM_HISTORY) }}" class="app-reviewable-section">
-  {% call card({"heading": "Mammogram history"}) %}
-    <div class="app-reviewable-section__status">
-      {{ tag(presenter.get_section_tag_properties(sections.MAMMOGRAM_HISTORY)) }}
-    </div>
+{% call card_with_status(
+  section=sections.MAMMOGRAM_HISTORY,
+  anchor=presenter.get_anchor(sections.MAMMOGRAM_HISTORY),
+  status_tag_properties=presenter.review_status_tag_properties(sections.MAMMOGRAM_HISTORY),
+  action_button_properties=presenter.review_action_button_properties(sections.MAMMOGRAM_HISTORY),
+  csrf_input=csrf_input,
+  ) %}
+  <p>The last confirmed mammogram and any added manually since then</p>
 
-    <p>The last confirmed mammogram and any added manually since then</p>
-
-    {{ summaryList({
-      "rows": [
-        {
-          "key": {
-            "text": "Last known mammograms"
-          },
-          "value": {
-            "html": last_mammogram_html(presented_mammograms)
-          }
+  {{ summaryList({
+    "rows": [
+      {
+        "key": {
+          "text": "Last known mammograms"
         },
-      ]
-    }) }}
+        "value": {
+          "html": last_mammogram_html(presented_mammograms)
+        }
+      },
+    ]
+  }) }}
 
-    {{ button({
-      "text": presenter.add_mammogram_button.text,
-      "href": presenter.add_mammogram_button.href,
-      "classes": "nhsuk-button--secondary nhsuk-button--small"
-    }) }}
+  {{ button({
+    "text": presenter.add_mammogram_button.text,
+    "href": presenter.add_mammogram_button.href,
+    "classes": "nhsuk-button--secondary nhsuk-button--small"
+  }) }}
+{% endcall %}
 
-    <hr class="nhsuk-section-break nhsuk-section-break--visible nhsuk-u-margin-bottom-4">
-
-    {% set action_button = presenter.get_section_action_button(sections.MAMMOGRAM_HISTORY) %}
-    {% if action_button.is_anchor %}
-      <a href="{{ action_button.href }}" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </a>
-    {% else %}
-      <form method="post" action="{{ action_button.href }}">
-        {{ csrf_input }}
-        <button type="submit" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </button>
-      </form>
-    {% endif %}
-  {% endcall %}
-</div>
-
-<div id="{{ presenter.get_anchor(sections.SYMPTOMS) }}" class="app-reviewable-section">
-  {% call card({
-    "heading": "Symptoms",
-  }) %}
-    <div class="app-reviewable-section__status">
-      {{ tag(presenter.get_section_tag_properties(sections.SYMPTOMS)) }}
-    </div>
-
-    <p {%- if not presenter.symptom_rows %} class="nhsuk-u-margin-bottom-3"{% endif %}>Any problems or symptoms, including lumps, swelling, rashes or nipple changes</p>
-    {% if presenter.symptom_rows %}
-       {{ summaryList({
-          "rows": presenter.symptom_rows
-        }) }}
-    {% else %}
-      {% set insetHtml %}
-        <p>No symptoms have been recorded for this participant.</p>
-      {% endset %}
-      {{ insetText({
-        "html": insetHtml,
-        "classes": "nhsuk-u-margin-top-0 nhsuk-u-margin-bottom-4"
+{% call card_with_status(
+  section=sections.SYMPTOMS,
+  anchor=presenter.get_anchor(sections.SYMPTOMS),
+  status_tag_properties=presenter.review_status_tag_properties(sections.SYMPTOMS),
+  action_button_properties=presenter.review_action_button_properties(sections.SYMPTOMS),
+  csrf_input=csrf_input,
+  ) %}
+  <p {%- if not presenter.symptom_rows %} class="nhsuk-u-margin-bottom-3"{% endif %}>Any problems or symptoms, including lumps, swelling, rashes or nipple changes</p>
+  {% if presenter.symptom_rows %}
+     {{ summaryList({
+        "rows": presenter.symptom_rows
       }) }}
-    {% endif %}
+  {% else %}
+    {% set insetHtml %}
+      <p>No symptoms have been recorded for this participant.</p>
+    {% endset %}
+    {{ insetText({
+      "html": insetHtml,
+      "classes": "nhsuk-u-margin-top-0 nhsuk-u-margin-bottom-4"
+    }) }}
+  {% endif %}
 
-    <hr>
-    <h3>Add symptoms</h3>
+  <hr>
+  <h3>Add symptoms</h3>
 
-    <div class="nhsuk-button-group app-button-group--small">
-      {% for button_info in presenter.symptom_buttons %}
-        {{ button({
-          "text": button_info.text,
-          "href": button_info.href,
-          "classes": "nhsuk-button--secondary nhsuk-button--small"
-        }) }}
-      {% endfor %}
-    </div>
+  <div class="nhsuk-button-group app-button-group--small">
+    {% for button_info in presenter.symptom_buttons %}
+      {{ button({
+        "text": button_info.text,
+        "href": button_info.href,
+        "classes": "nhsuk-button--secondary nhsuk-button--small"
+      }) }}
+    {% endfor %}
+  </div>
+{% endcall %}
 
-    <hr class="nhsuk-section-break nhsuk-section-break--visible nhsuk-u-margin-bottom-4">
+{% call card_with_status(
+  section=sections.MEDICAL_HISTORY,
+  anchor=presenter.get_anchor(sections.MEDICAL_HISTORY),
+  status_tag_properties=presenter.review_status_tag_properties(sections.MEDICAL_HISTORY),
+  action_button_properties=presenter.review_action_button_properties(sections.MEDICAL_HISTORY),
+  csrf_input=csrf_input,
+  ) %}
 
-    {% set action_button = presenter.get_section_action_button(sections.SYMPTOMS) %}
-    {% if action_button.is_anchor %}
-      <a href="{{ action_button.href }}" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </a>
-    {% else %}
-      <form method="post" action="{{ action_button.href }}">
-        {{ csrf_input }}
-        <button type="submit" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </button>
-      </form>
-    {% endif %}
-  {% endcall %}
-</div>
-
-{% set medical_history_card_html %}
   {% set mastectomy_or_lumpectomy_history_html %}
     {% for presented_item in presenter.mastectomy_or_lumpectomy_history %}
       <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ presented_item.change_link.href}}">
@@ -235,46 +215,15 @@
       }) }}
     {% endfor %}
   </div>
-{% endset %}
-<<<<<<< HEAD
+{% endcall %}
 
-{{ card({
-  "heading": "Medical history",
-  "descriptionHtml": medical_history_card_html
-}) }}
-||||||| parent of 49bb5131 (Add review UI to medical info page)
-{{ card({
-  "heading": "Medical history",
-  "descriptionHtml": medical_history_card_html
-}) }}
-=======
-
-<div id="{{ presenter.get_anchor(sections.MEDICAL_HISTORY) }}" class="app-reviewable-section">
-{% call card({
-    "heading": "Medical history"
-  }) %}
-    <div class="app-reviewable-section__status">
-      {{ tag(presenter.get_section_tag_properties(sections.MEDICAL_HISTORY)) }}
-    </div>
-
-    {{ medical_history_card_html }}
-
-    <hr class="nhsuk-section-break nhsuk-section-break--visible nhsuk-u-margin-bottom-4">
-
-    {% set action_button = presenter.get_section_action_button(sections.MEDICAL_HISTORY) %}
-    {% if action_button.is_anchor %}
-      <a href="{{ action_button.href }}" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </a>
-    {% else %}
-      <form method="post" action="{{ action_button.href }}">
-        {{ csrf_input }}
-        <button type="submit" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </button>
-      </form>
-    {% endif %}
-  {% endcall %}
-</div>
->>>>>>> 49bb5131 (Add review UI to medical info page)
-
-{% set breast_features_card_html %}
+{% call card_with_status(
+  section=sections.BREAST_FEATURES,
+  anchor=presenter.get_anchor(sections.BREAST_FEATURES),
+  status_tag_properties=presenter.review_status_tag_properties(sections.BREAST_FEATURES),
+  action_button_properties=presenter.review_action_button_properties(sections.BREAST_FEATURES),
+  csrf_input=csrf_input,
+  ) %}
     {% set breast_features_recorded = false %}
 
     {% set insetHtml %}
@@ -288,63 +237,51 @@
     <p class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0">
       <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">{{ "Add another feature" if breast_features_recorded else "Add a feature" }}</a>
     </p>
-{% endset %}
 
-<div id="{{ presenter.get_anchor(sections.BREAST_FEATURES) }}" class="app-reviewable-section">
-{% call card({
-  "heading": "Breast features"
-}) %}
-    <div class="app-reviewable-section__status">
-      {{ tag(presenter.get_section_tag_properties(sections.BREAST_FEATURES)) }}
-    </div>
-
-  {{ breast_features_card_html }}
-
-    <hr class="nhsuk-section-break nhsuk-section-break--visible nhsuk-u-margin-bottom-4">
-
-    {% set action_button = presenter.get_section_action_button(sections.BREAST_FEATURES) %}
-    {% if action_button.is_anchor %}
-      <a href="{{ action_button.href }}" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </a>
-    {% else %}
-      <form method="post" action="{{ action_button.href }}">
-        {{ csrf_input }}
-        <button type="submit" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </button>
-      </form>
+    {% if presenter.breast_features_action_button %}
+      {% if presenter.breast_features_action_button.is_anchor %}
+        <a href="{{ presenter.breast_features_action_button.href }}" class="nhsuk-link {{ presenter.breast_features_action_button.classes }}">
+          {{ presenter.breast_features_action_button.text }}
+        </a>
+      {% else %}
+        <form method="post" action="{{ presenter.breast_features_action_button.href }}" class="app-inline-form">
+          {{ csrf_input }}
+          <button type="submit" class="nhsuk-link-button {{ presenter.breast_features_action_button.classes }}">
+            {{ presenter.breast_features_action_button.text }}
+          </button>
+        </form>
+      {% endif %}
     {% endif %}
 {% endcall %}
-</div>
 
-{% set other_information_card_html %}
+{% call card_with_status(
+  section=sections.OTHER_INFORMATION,
+  anchor=presenter.get_anchor(sections.OTHER_INFORMATION),
+  status_tag_properties=presenter.review_status_tag_properties(sections.OTHER_INFORMATION),
+  action_button_properties=presenter.review_action_button_properties(sections.OTHER_INFORMATION),
+  csrf_input=csrf_input,
+  ) %}
   {% set hrt_link %}
   <a class="nhsuk-link" href="#">Enter hormone replacement therapy (HRT)</a>
   {% endset %}
   {% set pregnancy_and_breastfeeding_link %}
   <a class="nhsuk-link" href="#">Enter pregnancy and breastfeeding</a>
   {% endset %}
-{% endset %}
 
-<div id="{{ presenter.get_anchor(sections.OTHER_INFORMATION) }}" class="app-reviewable-section">
-{% call card({
-  "heading": "Other information"
-}) %}
-    <div class="app-reviewable-section__status">
-      {{ tag(presenter.get_section_tag_properties(sections.OTHER_INFORMATION)) }}
-    </div>
-
-  {{ other_information_card_html }}
-
-  <hr class="nhsuk-section-break nhsuk-section-break--visible nhsuk-u-margin-bottom-4">
-
-  {% set action_button = presenter.get_section_action_button(sections.OTHER_INFORMATION) %}
-  {% if action_button.is_anchor %}
-    <a href="{{ action_button.href }}" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </a>
-  {% else %}
-    <form method="post" action="{{ action_button.href }}">
-      {{ csrf_input }}
-      <button type="submit" class="nhsuk-button nhsuk-button--secondary"> {{ action_button.text }} </button>
-    </form>
+  {% if presenter.other_information_action_button %}
+    {% if presenter.other_information_action_button.is_anchor %}
+      <a href="{{ presenter.other_information_action_button.href }}" class="nhsuk-link {{ presenter.other_information_action_button.classes }}">
+        {{ presenter.other_information_action_button.text }}
+      </a>
+    {% else %}
+      <form method="post" action="{{ presenter.other_information_action_button.href }}" class="app-inline-form">
+        {{ csrf_input }}
+        <button type="submit" class="nhsuk-link-button {{ presenter.other_information_action_button.classes }}">
+          {{ presenter.other_information_action_button.text }}
+        </button>
+      </form>
+    {% endif %}
   {% endif %}
 {% endcall %}
-</div>
 
 {% endblock %}
