--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -7,6 +7,7 @@
 @forward "components/count";
 @forward "components/appointment-status";
 @forward "components/secondary-navigation";
+@forward "components/card-with-status";
 @forward "components/special-appointment-banner";
 @forward "components/nested-info";
 
