--- a/manage_breast_screening/mammograms/jinja2/mammograms/appointment_should_not_proceed.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/appointment_should_not_proceed.jinja
@@ -12,8 +12,6 @@
 {% block page_content %}
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    {{ form_error_summary(form) }}
-
     <h1 class="nhsuk-heading-l">
       {% if caption %}
       <span class="nhsuk-caption-l">
@@ -35,6 +33,10 @@
         }) }}
       </div>
     </form>
+
+    <p>
+    <a href="{{ change_previous_mammogram_url }}">Edit previous mammogram details</a>
+    </p>
   </div>
 </div>
 {% endblock %}
