Change date/time font colour to grey
this has been changed to fit in with design standards
as the date/time font is a secondary text

--- a/manage_breast_screening/clinics/jinja2/clinics/index.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/index.jinja
@@ -59,7 +59,7 @@
       <td>
         {{ presented_clinic.type }}
         <br>
-        <span class="nhsuk-u-secondary-text-color">{{ presented_clinic.risk_type }}</span>
+        <span class="nhsuk-hint">{{ presented_clinic.risk_type }}</span>
       </td>
 
       <td class="nhsuk-table__cell--numeric">
