Avoid 'backLink' is undefined in layout-app.jinja

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -1,4 +1,5 @@
 {% from 'nhsuk/components/header/macro.jinja' import header %}
+{% from 'nhsuk/components/back-link/macro.jinja' import backLink %}
 {% from "notification-banner/macro.jinja" import notificationBanner %}
 {% from 'components/appointment-status-bar.jinja' import appointment_status_bar %}
 
