Update and delete previous mammogram
Added change links to participant details and medical information

--- a/manage_breast_screening/participants/jinja2/components/participant-details/summary_list_rows.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/summary_list_rows.jinja
@@ -39,6 +39,10 @@
   {% if mammograms_by_date_added %}
     {% for mammogram in mammograms_by_date_added %}
       <p>
+      <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ mammogram.change_link.href}}">
+        {{ mammogram.change_link.text }}<span class="nhsuk-u-visually-hidden">{{ mammogram.change_link.visually_hidden_text }}</span>
+      </a>
+
       <span class="nhsuk-u-font-weight-bold">Added {{ mammogram.date_added }}</span>
       <br>{% if mammogram.date.is_exact %}{{ mammogram.date.absolute }} <span class="nhsuk-u-secondary-text-color">({{ mammogram.date.relative }})</span>{% else %}{{ mammogram.date.value }}{% endif %}
       <br>{{ mammogram.location }}
