Adjust css for medical info
- Rename card-with-status rules to use app- prefix
- Remove unnecessary position: relative rule for app-card-with-status (the card
  component that gets rendered inside this component has its own
  position rule specified)

--- a/manage_breast_screening/assets/sass/components/_card-with-status.scss
+++ b/manage_breast_screening/assets/sass/components/_card-with-status.scss
@@ -1,10 +1,6 @@
 @use "../vendor/nhsuk-frontend/base" as *;
 
-.card-with-status {
-  position: relative;
-}
-
-.card-with-status__tag {
+.app-card-with-status__tag {
   position: absolute;
   top: nhsuk-spacing(3);
   right: nhsuk-spacing(3);
