--- a/manage_breast_screening/clinics/jinja2/clinics/index.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/index.jinja
@@ -6,12 +6,8 @@
 
 {% block page_content %}
 <h1>
-<span class="nhsuk-caption-l">
-{{ provider_name }}
-</span>
-  {{ 
-  presenter.heading
-   }}
+  <span class="nhsuk-caption-l"> {{ provider_name }} </span>
+  {{ presenter.heading }}
 </h1>
 
 {% set ns = namespace() %}
