Add complete all and continue buttons to medical info page
- Add these buttons to the top and bottom of the page, as submit buttons
  on a form that POSTs to the current URL
- Rework RecordMedicalInformationForm to back these forms, and have its
  save function create all missing medical info review records for the
  appointment
- Have the view wrap the save call to this form in a transaction (as
  we're potentially writing multiple database records)
- Redirect to Awaiting Images when done

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -285,3 +285,13 @@
 {% endcall %}
 
 {% endblock %}
+
+{% block wizard_form %}
+  <form method="post">
+    {{ csrf_input }}
+    {{ button({
+      "text": "Complete all and continue",
+      "classes": "nhsuk-u-margin-bottom-4"
+    }) }}
+  </form>
+{% endblock %}
