Changed the header variable to show service name.
This has been changed to fit in with the prototype

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -15,7 +15,7 @@
 {% block header %}
   {{ header({
     "service": {
-      "name": "Manage breast screening"
+      "text": "Manage breast screening"
     },
     "account": {
       "items": header_account_items(request.user)
