Add navActive context processor
This enables the header to be updated to show the active tab, as
per the prototype.

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -29,7 +29,7 @@
         },
         {
           "href": "/clinics/",
-          "text": "Clinics",
+          "text": "Screening",
           'current': true if navActive == "clinics"
         }
       ]
