Clinic Show Page - Go Back Link Text Change
* Change 'go back' text to 'clinics' for clarity.

--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -12,6 +12,7 @@
 {% block beforeContent %}
 {{ backLink({
   "href": url('clinics:index'),
+  "text": "Clinics"
 }) }}
 {% endblock beforeContent %}
 
