Proceed anyway option
Provide option to proceed with appointment even when have

had previous mammogram in last six months

--- a/manage_breast_screening/participants/jinja2/components/participant-details/summary_list_rows.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/summary_list_rows.jinja
@@ -54,6 +54,10 @@
       {% if mammogram.additional_information %}
         <br>Additional information: {{ mammogram.additional_information | nl2br }}
       {% endif %}
+
+      {% if mammogram.reason_for_continuing %}
+        <br>Reason for continuing: {{ mammogram.reason_for_continuing | nl2br }}
+      {% endif %}
       </p>
     {% endfor %}
   {% else %}
