--- a/manage_breast_screening/mammograms/jinja2/mammograms/appointment_should_not_proceed.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/appointment_should_not_proceed.jinja
@@ -18,7 +18,7 @@
 
     <p>Advise the participant that they will be invited for their next scheduled mammogram based on the information provided.</p>
 
-    <form action="{{ url('mammograms:attended_not_screened', kwargs={'appointment_pk': appointment.pk}) }}" method="post">
+    <form action="{{ url('mammograms:attended_not_screened', kwargs={'appointment_pk': presented_appointment.pk}) }}" method="post" novalidate>
       <div class="nhsuk-button-group">
         {{ csrf_input }}
         {{ button({
@@ -29,6 +29,9 @@
 
     <p>
     <a class="nhsuk-link--no-visited-state" href="{{ change_previous_mammogram_url }}">Edit previous mammogram details</a>
+    </p>
+    <p>
+    <a href="{{ proceed_anyway_url }}" class="nhsuk-link app-link--warning">Proceed with this appointment</a>
     </p>
   </div>
 </div>
